[package]
name = "sqlx-test"
version = "0.1.0"
authors = ["Michael Killough <michaeljkillough@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
sqlx = { version = "0.3.5", default-features = false, features = ["macros", "postgres", "runtime-tokio"] }

